<resources>
    <string name="app_name">SDK-Library</string>
    <string name="wonders_text_open_after_paying">开通医后付服务</string>
    <string name="wonders_text_input_phone_number">请输入手机号码</string>
    <string name="wonders_text_input_verify_code">请输入验证码</string>
    <string name="wonders_get_sms_code">获取验证码</string>
    <string name="wonders_text_phone_number_nullable">手机号为空或非法！</string>
    <string name="invoke_js_method">调用js方法</string>
    <string name="wonders_common_pay_platform">万达统一支付平台示例</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="wonders_pay_name">支付名称</string>
    <string name="wonders_detail_introduce">详细介绍</string>
    <string name="wonders_personal_pay_complete">个人账户支付0.00元已完成！</string>
    <string name="wonders_text_alipay"><Data><![CDATA[<font size="40" color="#333333">支付宝</font><br><font size="36" color="#969696">推荐有支付宝账户的用户使用</font>]]></Data></string>
    <string name="wonders_text_wechat_pay"><Data><![CDATA[<font size="40" color="#333333">微信</font><br><font size="36" color="#969696">推荐有微信账户的用户使用</font>]]></Data></string>
    <string name="wonders_text_union_pay"><Data><![CDATA[<font size="40" color="#333333">银行卡</font><br><font size="36" color="#969696">推荐有支付宝账户的用户使用</font>]]></Data></string>
    <string name="wonders_confirm_pay">确认付款</string>
    <string name="wonders_personal_pay">个人账户支付</string>
    <string name="wonders_open_after_pay">已开通医后付</string>
    <string name="wonders_to_open_after_pay">去开通医后付</string>
    <string name="wonders_open_mobile_pay">已申领电子社保卡</string>
    <string name="wonders_to_open_mobile_pay">未申领电子社保卡</string>
    <string name="wonders_electronic_social_card_state">电子社保卡状态</string>
    <string name="wonders_look_afterpay_rules">查看医后付协议</string>
    <string name="wonders_cancel_after_pay">取消医后付</string>
    <string name="wonders_update_pay_pwd">修改医保支付密码</string>
    <string name="wonders_to_pay_money">您有一笔医后付欠款234元未付，建议前去</string>
    <string name="wonders_to_pay_fee1">您有医后付欠费</string>
    <string name="wonders_to_pay_fee2">元，</string>
    <string name="wonders_settings">设置</string>
    <string name="wonders_day_detailed_list">日清单列表</string>
    <string name="wonders_pay_fee"><u>点击缴纳</u>!</string>
    <string name="wonders_pay_records">查看已完成订单</string>
    <string name="wonders_pass_update">修改手机号/取消医后付/查看协议</string>
    <string name="wonders_mark_text"><![CDATA[<font size="40" color="#333333">您已成功支付湖州第三人民医院未缴纳费用1元，另89元支付失败，请</font><font size="40" color="#007edf">继续支付！</font>]]></string>
    <string name="wonders_mark_text2"><![CDATA[<font size="40" color="#333333">您有一笔未完成的订单湖州市中心医院，总金额48.60元，请</font> <font size="40" color="#007edf">继续支付！</font>]]></string>
    <string name="wonders_pay_money_record">已完成订单</string>
    <string name="wonders_menzhen_bill">门诊订单</string>
    <string name="wonders_not_pay_records">门诊在线缴费</string>
    <string name="wonders_huzhou_renmin_hospital">湖州人民医院</string>
    <string name="wonders_huzhou_city">湖州市</string>
    <string name="wonders_select_hospital">选择缴费医院</string>
    <string name="wonders_select_date_please">请选择日期</string>
    <string name="wonders_select_hospital_please">请选择医院</string>
    <string name="wonders_pay_money">立即支付</string>
    <string name="wonders_text_yuan">元</string>
    <string name="wonders_text_not_pay">未支付：</string>
    <string name="wonders_text_dai_pay">待支付：</string>
    <string name="wonders_text_liangxiaoning">梁晓宁</string>
    <string name="wonders_text_social_number">社保卡号：</string>
    <string name="wonders_social_number">00000000000000000000</string>
    <string name="wonders_find_date">日期</string>
    <string name="wonders_social_card_number">社保卡号</string>
    <string name="wonders_pay_serial_number">订单编号:201802809535123456</string>
    <string name="wonders_medicine_fee">药品费</string>
    <string name="wonders_look_detail">查看详情</string>
    <string name="wonders_pay_detail">缴费详情</string>
    <string name="wonders_pay_bill_detail">订单详情</string>
    <string name="wonders_my_ele_invoice">我的发票</string>
    <string name="wonders_my_health_card">电子健康卡</string>
    <string name="wonders_family_doctor">家庭医生</string>
    <string name="wonders_bill_qrcode">订单二维码</string>
    <string name="wonders_order_time">订单时间：2018-02-28 09:55:35</string>
    <string name="wonders_total_fee">共4件 合计：196.21元</string>
    <string name="wonders_text_pay_detail">支付详情</string>
    <string name="wonders_is_yibao_pay">是否允许医保支付</string>
    <string name="wonders_is_allow_yibao">医保支付关闭后，全部金额将由个人账户支付</string>
    <string name="wonders_text_open">开通</string>
    <string name="wonders_already_open">已开通</string>
    <string name="wonders_rule_instruction">我已认真阅读并同意《“医后付”服务协议书》了解“先诊疗后付费”的违约对个人信用有影响。</string>
    <string name="wonders_open_afterpay_success">恭喜您已成功开通“医后付”服务</string>
    <string name="wonder_open_afterpay_success_copyrighter">您可在舟山市妇幼保健院、舟山市中医院这2家医院享受‘医后付’服务，无需再签约。</string>
    <string name="wonders_wenxin_toast">尊敬的用户，当天看完病后记得一次性把所有费用付清。</string>
    <string name="wonders_back_to_afterpay_home">返回医后付首页</string>
    <string name="wonders_back_to_home_page">返回首页</string>
    <string name="wonders_name">姓名</string>
    <string name="wonders_arrearage">欠费</string>
    <string name="wonders_sign_date">签约日期</string>
    <string name="wonders_ic_number">身份证号</string>
    <string name="wonders_id_number">身份证号：</string>
    <string name="wonders_finished_order">已完成订单</string>
    <string name="wonders_after_pay_home">医保医后付</string>
    <string name="wonders_self_pay_home">非医保掌上付</string>
    <string name="wonders_in_hospital_service">出院掌上付</string>
    <string name="wonders_in_hospital_record">历史住院记录</string>
    <string name="wonders_in_hospital_list">历史住院列表</string>
    <string name="wonders_leave_hospital_settle">出院结算</string>
    <string name="wonders_recharge_record">充值记录</string>
    <string name="wonders_payment_result">缴费结果</string>
    <string name="wonders_after_pay_rules">医后付协议</string>
    <string name="wonders_notification_phone">通知手机号</string>
    <string name="wonders_unfinished_order">未完成订单</string>
    <string name="wonders_original_phone">原手机号为</string>
    <string name="wonders_update_notification_phone">修改通知手机号</string>

    <!-- date scroller -->
    <string name="picker_sure">确定</string>
    <string name="picker_cancel">取消</string>
    <string name="picker_title">请选择出生日期</string>

    <string name="picker_year">年</string>
    <string name="picker_month">月</string>
    <string name="picker_day">日</string>
    <string name="picker_hour">时</string>
    <string name="picker_minute">分</string>

    <string name="birthday">出生日期</string>
    <string name="birthday_hint">请选择出生日期</string>
    <string name="wonders_group_text_pay_notice">温馨提示：总额将由现金部分和医保部分组成，请先点击“立即支付”完成现金部分支付，然后再完成医保部分支付。</string>
    <string name="wonders_after_pay_rules_title">“医后付”签约协议</string>
    <string name="wonders_after_pay_rules_content">
一.服务内容：为您提供“先看病后付费”服务，让原来门诊多次排队付费改变为“医后付一次”。\n
二.服务范围：一次签约，在舟山市中医院、舟山市妇幼保健院享受“医后付”服务。\n
三.您的义务：在当天就诊结束后一次性付清费用。\n
四.您的责任：当天未付清费用的，停止“医后付”服务，缴清费用后立即恢复，超过7个自然日未付清费用的，将您欠费。\n
五.本协议在您同意后生效，并为您启用“医后付”服务。\n
</string>
    <string name="wonders_after_pay_home_notice">温馨提示：\n
        1.开通医后付，可在舟山医院、舟山市妇女儿童医院、舟山市中医院、舟山市第二人民医院、舟山市口腔医院、舟山市普陀区人民医院、嵊泗县人民医院等县级以上公立医院享受“先看病后付费”服务。\n
        2.申领电子社保卡，通过刷脸认证并设置支付密码后，享受在线医保支付服务。</string>
    <string name="wonders_group_select_pay_type">选择支付方式</string>
    <string name="wonders_group_personal_pay_back_notice">确定要放弃医保部分支付吗？放弃支付不会取消订单，如果要继续支付请至未完成订单中进行。30分钟内未完成，现金部分将原路返回。</string>
    <string name="wonders_group_personal_pay_back_notice2">确定要放弃支付吗？</string>
    <string name="wonders_settle_failed1">医保结算失败。现金支付部分将在30分钟内，原路退回，请留意查看！</string>
    <string name="wonders_self_failed1">结算失败，现金支付部分将在30分钟内原路退回，请留意查看！</string>
    <string name="wonders_settle_failed2">医保结算失败，您可返回订单重新支付。</string>
    <string name="wonders_self_failed2">结算失败，您可返回订单重新支付。</string>
    <string name="wonders_group_settle_failed_repay">结算失败，您可返回首页重新支付。</string>
    <string name="wonders_group_electronic_card_closed">您未开通电子社保卡，请先开通！</string>
</resources>
