<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llOpenSuccess"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/wonders_padding_10dp"
        android:drawableTop="@drawable/wonders_group_open_success"
        android:gravity="center"
        android:text="@string/wonders_open_afterpay_success"
        android:textColor="@color/wonders_rgb_color_333333"
        android:textSize="@dimen/wonders_text_size_16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/wonders_margin_10dp"
        android:lineSpacingExtra="@dimen/wonders_padding_4dp"
        android:text="@string/wonder_open_afterpay_success_copyrighter"
        android:textColor="@color/wonders_rgb_color_969696"
        android:textSize="@dimen/wonders_text_size_14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wonders_margin_10dp"
        android:orientation="vertical"
        android:padding="@dimen/wonders_padding_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="温馨提示："
            android:textColor="@color/wonders_rgb_color_4395ff"
            android:textSize="@dimen/wonders_text_size_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wonders_margin_10dp"
            android:text="@string/wonders_wenxin_toast"
            android:textColor="@color/wonders_rgb_color_969696"
            android:textSize="@dimen/wonders_text_size_14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBackToHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/wonders_margin_10dp"
        android:layout_marginTop="@dimen/wonders_margin_10dp"
        android:background="@drawable/wonders_group_blue_shape"
        android:text="@string/wonders_back_to_afterpay_home"
        android:textColor="@color/wonders_rgb_color_ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>