<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/wonders_rgb_color_ffffff"
    android:orientation="vertical">

    <include layout="@layout/wonders_group_self_pay_card" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/wonders_margin_16dp"
        android:background="@color/wonders_rgb_color_e0e0e0" />

    <LinearLayout
        android:id="@+id/llPayRecord"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/wonders_rgb_color_ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/wonders_padding_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/wonders_margin_8dp"
            android:drawableStart="@drawable/wonders_group_record"
            android:drawablePadding="@dimen/wonders_padding_4dp"
            android:gravity="center"
            android:text="@string/wonders_menzhen_bill"
            android:textColor="@color/wonders_rgb_color_333333"
            android:textSize="@dimen/wonders_text_size_14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/wonders_margin_10dp"
            android:drawableEnd="@drawable/wonders_group_right_arrow"
            android:drawablePadding="@dimen/wonders_padding_10dp"
            android:text="@string/wonders_pay_records"
            android:textColor="@color/wonders_rgb_color_b4b4b4"
            android:textSize="@dimen/wonders_text_size_12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/wonders_rgb_color_e0e0e0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/wonders_rgb_color_eeeeee"
        android:gravity="center"
        android:padding="@dimen/wonders_padding_10dp"
        android:text="@string/wonders_not_pay_records"
        android:textColor="@color/wonders_rgb_color_000000"
        android:textSize="@dimen/wonders_text_size_18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/wonders_rgb_color_e0e0e0" />

    <TextView
        android:id="@+id/tvHospitalName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/wonders_margin_16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="@dimen/wonders_margin_16dp"
        android:background="@color/wonders_rgb_color_ffffff"
        android:drawableStart="@drawable/wonders_group_hospital"
        android:drawableEnd="@drawable/wonders_group_right_arrow"
        android:drawablePadding="@dimen/wonders_padding_10dp"
        android:gravity="start|center"
        android:text="@string/wonders_select_hospital_please"
        android:textColor="@color/wonders_rgb_color_333333" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/wonders_rgb_color_e0e0e0" />

</LinearLayout>