<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rgPayType"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/wonders_margin_10dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/rbAlipay"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:button="@null"
        android:drawableStart="@drawable/wonders_group_alipay"
        android:drawableEnd="@drawable/wonders_group_checked_selector"
        android:drawablePadding="8dp"
        android:lineSpacingExtra="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/wonders_text_alipay" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/wonders_rgb_color_e0e0e0" />

    <RadioButton
        android:id="@+id/rbWeChatPay"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:button="@null"
        android:drawableStart="@drawable/wonders_group_wechat"
        android:drawableEnd="@drawable/wonders_group_checked_selector"
        android:drawablePadding="8dp"
        android:lineSpacingExtra="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/wonders_text_wechat_pay"
        android:visibility="invisible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/wonders_rgb_color_e0e0e0"
        android:visibility="invisible" />

    <!-- 暂时隐藏银联支付方式 -->
    <RadioButton
        android:id="@+id/rbUnionPay"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:button="@null"
        android:drawableStart="@drawable/wonders_group_union_pay"
        android:drawableEnd="@drawable/wonders_group_checked_selector"
        android:drawablePadding="8dp"
        android:lineSpacingExtra="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/wonders_text_union_pay"
        android:visibility="invisible" />
</RadioGroup>