<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llOpenPager"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/wonders_margin_8dp"
        android:background="@color/wonders_rgb_color_e0e0e0" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@null"
        android:hint="@string/wonders_text_input_phone_number"
        android:inputType="phone"
        android:paddingStart="@dimen/wonders_padding_10dp"
        android:textColor="@color/wonders_rgb_color_2f3132"
        android:textColorHint="@color/wonders_rgb_color_979797"
        android:textSize="@dimen/wonders_text_size_16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/wonders_rgb_color_e0e0e0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <EditText
            android:inputType="number"
            android:id="@+id/etSmsCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:hint="@string/wonders_text_input_verify_code"
            android:paddingStart="@dimen/wonders_padding_10dp"
            android:textColor="@color/wonders_rgb_color_2f3132"
            android:textColorHint="@color/wonders_rgb_color_979797"
            android:textSize="@dimen/wonders_text_size_14sp" />

        <TextView
            android:id="@+id/btnGetSmsCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/wonders_margin_8dp"
            android:background="@drawable/wonders_group_sms_code_button_shape"
            android:padding="@dimen/wonders_padding_8dp"
            android:text="@string/wonders_get_sms_code"
            android:textColor="@color/wonders_rgb_color_18b670"
            android:textSize="@dimen/wonders_text_size_14sp"
            android:visibility="visible" />

        <cn.iwgang.countdownview.CountdownView
            android:id="@+id/countDownView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/wonders_margin_8dp"
            android:background="#E9E9E9"
            android:padding="@dimen/wonders_padding_8dp"
            android:visibility="gone"
            app:isHideTimeBackground="true"
            app:isShowDay="false"
            app:isShowHour="false"
            app:isShowMillisecond="false"
            app:isShowMinute="false"
            app:isShowSecond="true"
            app:isTimeTextBold="false"
            app:suffixGravity="bottom"
            app:suffixSecond="S"
            app:suffixTextSize="12sp"
            app:timeTextColor="@android:color/black"
            app:timeTextSize="12sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/wonders_rgb_color_e0e0e0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wonders_margin_8dp"
        android:orientation="horizontal"
        android:padding="@dimen/wonders_padding_10dp">

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/wonders_group_toggle_checkbox_selector"
            android:textOff=""
            android:textOn="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wonders_rule_instruction"
            android:textColor="@color/wonders_rgb_color_c4c5c6" />
    </LinearLayout>

    <Button
        android:id="@+id/btnOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/wonders_margin_10dp"
        android:layout_marginTop="@dimen/wonders_margin_10dp"
        android:background="@drawable/wonders_group_blue_shape"
        android:text="@string/wonders_text_open"
        android:textColor="@color/wonders_rgb_color_ffffff"
        android:textSize="16sp" />

</LinearLayout>