<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.wondersgroup.android.sdk.widget.ArcView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:arcHeight="80dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/wonders_margin_16dp"
        android:layout_marginRight="@dimen/wonders_margin_16dp"
        android:background="@drawable/wonders_group_white_shape_4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wonders_margin_28dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTreatName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/wonders_margin_48dp"
                android:text="@string/wonders_text_liangxiaoning"
                android:textColor="@color/wonders_rgb_color_333333"
                android:textSize="@dimen/wonders_text_size_18sp" />

            <TextView
                android:id="@+id/tvIdNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/wonders_margin_10dp"
                android:text="@string/wonders_social_number"
                android:textColor="@color/wonders_rgb_color_666666"
                android:textSize="@dimen/wonders_text_size_12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wonders_margin_10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAfterPayState"
                android:layout_width="144dp"
                android:layout_height="32dp"
                android:background="@drawable/wonders_group_open_state_selector"
                android:drawableStart="@drawable/wonders_group_already_open"
                android:enabled="false"
                android:gravity="center"
                android:paddingStart="@dimen/wonders_padding_8dp"
                android:paddingEnd="@dimen/wonders_padding_8dp"
                android:text="@string/wonders_open_after_pay"
                android:textColor="@drawable/wonders_group_text_selector"
                android:textSize="@dimen/wonders_text_size_10sp" />

            <TextView
                android:id="@+id/tvMobilePayState"
                android:layout_width="144dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/wonders_margin_8dp"
                android:background="@drawable/wonders_group_open_state_selector"
                android:drawableStart="@drawable/wonders_group_already_open"
                android:gravity="center"
                android:paddingStart="@dimen/wonders_padding_8dp"
                android:paddingEnd="@dimen/wonders_padding_8dp"
                android:text="@string/wonders_open_mobile_pay"
                android:textColor="@drawable/wonders_group_text_selector"
                android:textSize="@dimen/wonders_text_size_10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llToPayFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wonders_margin_8dp"
            android:layout_marginBottom="@dimen/wonders_margin_20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/wonders_padding_4dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/tvToPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/wonders_rgb_color_333333"
                android:textSize="@dimen/wonders_text_size_12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wonders_pay_fee"
                android:textColor="@color/wonders_rgb_color_fea127"
                android:textSize="@dimen/wonders_text_size_12sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/wonders_margin_16dp"
        android:layout_marginRight="@dimen/wonders_margin_16dp"
        android:background="@drawable/wonders_group_wave" />

</RelativeLayout>